--- a/ProcurementTracker/wwwroot/css/site.css
+++ b/ProcurementTracker/wwwroot/css/site.css
@@ -128,6 +128,32 @@ body {
     min-height: 370px;
 }
 
+.form-check {
+    display: flex;
+    align-items: center;
+}
+
+    .form-check label {
+        font-size: 18px;
+    }
+
+    .form-check .form-check-input[type=checkbox] {
+        border-radius: .25em;
+        height: 20px;
+        width: 20px;
+    }
+
+    .form-check .form-check-input[type=radio] {
+        border-radius: 100%;
+        height: 20px;
+        width: 20px;
+    }
+
+.form-switch .form-check-input[type=checkbox] {
+    border-radius: 2em;
+    height: 20px;
+}
+
 @media screen and (max-height: 450px) {
     .details-nav {
         padding-top: 15px;
