--- a/ProcurementTracker/Pages/Procurements/Index.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Index.cshtml
@@ -2,100 +2,73 @@
 @model ProcurementTracker.Pages.Procurements.IndexModel
 
 @{
-	ViewData["Title"] = "Procurements";
+    ViewData["Title"] = "Procurements";
 }
 
 <h3>Procurements</h3>
 <hr />
 
 <p>
-	<a asp-page="Create" class="btn btn-light btn-outline-secondary"><i class="fas fa-plus-square"></i> Add Procurement</a>
+    <a asp-page="Create" class="btn btn-light btn-outline-secondary"><i class="fas fa-plus-square"></i> Add Procurement</a>
 </p>
 <div class="card bg-light mb-2 h-20">
-	<div class="card-body">
-		<form method="post">
-			<div class="form-row">
-				<div class="form-group col-12">
-					<label><small>Search</small></label>
-					<input type="text" class="form-control form-control-sm" value="@Model.SearchText" name="SearchText" placeholder="Enter search keywords...">
-				</div>
-			</div>
-			<div class="form-row">
-				<div class="form-group col-4">
-					<label><small>Plan</small></label>
-					<select asp-for="Plan" class="form-control form-control-sm">
-						<option selected>Choose...</option>
-						<option>BUDGET</option>
-						<option>PROCUREMENT PLAN</option>
-					</select>
-				</div>
-				<div class="form-group col-4">
-					<label><small>Procurement Method</small></label>
-					<select asp-for="ProcurementMethod" value="@Model.ProcurementMethod" class="form-control form-control-sm" asp-items="@Model.ProcurementMethods">
-						<option selected>Choose...</option>
-					</select>
-				</div>
-				<div class="form-group col-4">
-					<label><small>Status</small></label>
-					<select asp-for="ProcurementStatus" value="@Model.ProcurementStatus" class="form-control form-control-sm" asp-items="@Model.ProcurementStatuses">
-						<option selected>Choose...</option>
-					</select>
-				</div>
-			</div>
-			<button asp-page-handler="search" class="btn btn-primary btn-sm">Search</button>
-			<button asp-page-handler="clear" class="btn btn-light btn-sm">Clear</button>
-		</form>
-	</div>
+    <div class="card-body">
+        <form method="post">
+            <div class="form-row">
+                <div class="form-group col-12">
+                    <label><small>Search</small></label>
+                    <input type="text" class="form-control form-control-sm" value="@Model.SearchText" name="SearchText" placeholder="Enter search keywords...">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-4">
+                    <label><small>Plan</small></label>
+                    <select asp-for="Plan" class="form-control form-control-sm">
+                        <option selected>Choose...</option>
+                        <option>BUDGET</option>
+                        <option>PROCUREMENT PLAN</option>
+                    </select>
+                </div>
+                <div class="form-group col-4">
+                    <label><small>Procurement Method</small></label>
+                    <select asp-for="ProcurementMethod" value="@Model.ProcurementMethod" class="form-control form-control-sm" asp-items="@Model.ProcurementMethods">
+                        <option selected>Choose...</option>
+                    </select>
+                </div>
+                <div class="form-group col-4">
+                    <label><small>Status</small></label>
+                    <select asp-for="ProcurementStatus" value="@Model.ProcurementStatus" class="form-control form-control-sm" asp-items="@Model.ProcurementStatuses">
+                        <option selected>Choose...</option>
+                    </select>
+                </div>
+            </div>
+            <button asp-page-handler="search" class="btn btn-primary btn-sm">Search</button>
+            <button asp-page-handler="clear" class="btn btn-light btn-sm">Clear</button>
+        </form>
+    </div>
 </div>
-<table class="table table-sm table-striped table-bordered">
-	<thead>
-		<tr>
-			<th>
-				@Html.DisplayNameFor(model => model.Procurement[0].Subject)
-			</th>
-			<th>
-				@Html.DisplayNameFor(model => model.Procurement[0].Status)
-			</th>
-			<th>
-				@Html.DisplayNameFor(model => model.Procurement[0].EstimatedAmount)
-			</th>
-			<th>
-				@Html.DisplayNameFor(model => model.Procurement[0].ProcurementMethod)
-			</th>
-			<th>
-				@Html.DisplayNameFor(model => model.Procurement[0].IsPlanned)
-			</th>
-		</tr>
-	</thead>
-	<tbody>
-		@if (Model.Procurement == null)
-		{
-			<tr>
-				<td colspan="5"><p class="lead">Enter keyword to search for procurement</p></td>
-			</tr>
-		}
-		else
-		{
-			@foreach (var item in Model.Procurement)
-			{
-				<tr>
-					<td>
-						<a asp-page="./Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Subject)</a>
-					</td>
-					<td class="bg-@item.StatusColorCode text-@item.StatusTextColorCode">
-						@Html.DisplayFor(modelItem => item.Status)
-					</td>
-					<td>
-						@Html.DisplayFor(modelItem => item.Currency) @Html.DisplayFor(modelItem => item.EstimatedAmount)
-					</td>
-					<td>
-						@Html.DisplayFor(modelItem => item.ProcurementMethod)
-					</td>
-					<td>
-						@Model.DisplayProcurementPlan(item.IsPlanned)
-					</td>
-				</tr>
-			}
-		}
-	</tbody>
-</table>
+<br />
+<h6>Search results</h6>
+<hr />
+
+@foreach (var procurement in Model.Procurement)
+{
+    <div class="card">
+        <div class="card-body">
+            <div class="form-row"><p class="lead">@procurement.Subject</p></div>
+            <div class="form-row"><p class="font-italic">@procurement.Description</p></div>
+            <div class="form-row"><p class="col-12 small">Procurement officer: </p></div>
+            <div class="row">
+                <p class="col-4 small">Department: @procurement.Department</p>
+                <p class="col-4 small">Is planned: <input checked="@procurement.IsPlanned" class="custom-checkbox" type="checkbox" disabled /></p>
+                <p class="col-4 small">Procurement stage: <span class="badge badge-@procurement.StatusColorCode">@procurement.Status</span></p>
+            </div>
+            <div class="row">
+                <p class="col-4 small">Estimated amount: @procurement.EstimatedAmount</p>
+                <p class="col-4 small">Funding source: @procurement.FundingSource</p>
+                <p class="col-4 small">Procurement method: @procurement.ProcurementMethod</p>
+            </div>
+        </div>
+    </div>
+}
+<br />
